# home-energy-flow

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
meteo_data_source/: README.md  Timeseries_47.753_8.939_SA3_45deg_-90deg_2020_2023.json  Timeseries_47.753_8.939_SA3_45deg_90deg_2020_2023.json  Timeseries_47.755_8.938_SA3_30deg_0deg_2020_2023.json
solar_data/: Timeseries_47.754_8.939_SA3_90deg_-90deg_2020_2023.json  Timeseries_47.754_8.939_SA3_90deg_90deg_2020_2023.json
src/home_energy_flow/: main.py  prices.py
src/home_energy_flow/compute/: consumption_profiles.py
src/home_energy_flow/consumption/: consumption_profiles.py
src/home_energy_flow/plot/: aggregate_monthly_data.py  datamodels.py  plot_graph.py  print_as_table.py
src/home_energy_flow/production/: compute_production.py  datamodels.py  meteo_data.py  meteo_datamodels.py  meteo_load.py  pv_system.py
src/home_energy_flow/storage/: compute_storage.py
src/solar_production/compute/: compute_consumption.py  compute_production.py
src/solar_production/datamodel/: common_data.py  pv_data.py  solar_data.py
src/solar_production/scripts/: main.py
src/solar_production/visualize/: plot.py  print_as_table.py
