[project]
name = "home_energy_flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "pydantic>=2.9.2",
    "ruff>=0.7.0",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20240106",
]


[tool.setuptools]
package-dir = {""= "src"}
